<resources>
    <string name="app_name">Freelancer Transporter</string>
    <string name="job_board_title">Available jobs</string>
    <string name="accepted_jobs_title">Current jobs</string>
    <string name="my_profile_title">My Profile</string>
    <string name="history_title">History</string>
    <string name="post_new_job_title">Post New Job</string>
    <string name="show_best_route_title">Show All Locations</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="name_title">Name:</string>
    <string name="statistics_title">Statistics</string>
    <string name="accept_title">Accept</string>
    <string name="cancel_title">Cancel</string>
    <string name="pick_up_title">Pick Up</string>
    <string name="complete_title">Complete</string>
    <string name="package_size_description">The package\'s size: %s</string>
    <string name="job_details_title">Job Details</string>
    <string name="destination_title">Destination:</string>
    <string name="pick_up_point_title">Pick Up Point:</string>
    <string name="package_size_title">Package Size:</string>
    <string name="payment_title">Payment:</string>
    <string name="add_job_title_here">Add job title here!</string>
    <string name="add_pick_up_point_address_here">Add Pick Up Point address here!</string>
    <string name="add_destination_address_here">Add Destination Address here!</string>
    <string name="specify_payment_here">Specify payment here!</string>
    <string name="user_rating_title">User Rating:</string>
    <string name="listing_expires_on">Listing Expires On:</string>
    <string name="delivery_deadline">Delivery Deadline:</string>
    <string name="history_title_feature">History</string>
    <string name="current_jobs_title_feature">Current jobs</string>
    <string name="job_expired_info">This Job Listing expired!</string>
    <string name="job_completed_info">This Job was completed!</string>
    <string name="job_is_yours_info">You posted this job!</string>
    <string name="cargo_space_occupancy">Cargo space occupancy</string>
    <string name="jobboard_title">Available jobs</string>
    <string name="cargo_occupancy">%d/%d</string>
    <string name="network_error">Network error!</string>
    <string name="open_wifi_settings">Open wifi settings</string>
    <string name="application_error">Application error!</string>
    <string name="server_error">Server error!</string>
    <string name="expand_map">Expand Map</string>
    <string name="collapse_map">Collapse Map</string>
    <string name="error_invalid_cargo_data_loaded">Invalid cargo data loaded from server!</string>
    <string name="admin_statistics_title">Admin statistics</string>
    <string name="login_title">Welcome to Freelancer Transporter!</string>
    <string name="invalid_format_given_error">Invalid format was given!</string>
    <string name="invalid_login_data_error">Check the given email address and password!</string>
    <string name="email_title">Email:</string>
    <string name="password_title">Password:</string>
    <string name="enter_email_hint">Enter your Email address!</string>
    <string name="enter_password_hint">Enter your password here!</string>
    <string name="login_button">Login</string>
    <string name="register_as_sender_info">Register as package sender</string>
    <string name="register_as_transporter_info">Register as package sender and transporter</string>
    <string name="user_registration_title">Registration</string>
    <string name="button_register">Register</string>
    <string name="login_register_text">No account yet? Create one</string>
    <string name="registration_error_no_role_selected">Choose your preferred role!</string>
    <string name="registration_auto_login_fail_message">Registration was successful, but auto-login has failed!</string>
    <string name="error_msg_email_invalid">Email address might be invalid!</string>
    <string name="error_msg_password_invalid">Password might be invalid!</string>
    <string name="error_reg_given_data_invalid">The given data is invalid!</string>
    <string name="error_reg_already_used_email">This email is already being used!</string>
    <string name="error_reg_invaid_email_format">Email format is invalid!</string>
    <string name="hint_registration_cargo_max_size">Max cargo space</string>
    <string name="error_invalid_cargo_size_registration">Check the given cargo size!</string>
    <string name="tab_title_announced_packages">Announced packages</string>
    <string name="tab_title_accpted_deliveries">Accepted deliveries</string>
    <string name="tab_title_small">Small</string>
    <string name="tab_title_medium">Medium</string>
    <string name="tab_title_large">Large</string>
    <string name="tab_title_history_sent_packages">Sent packages</string>
    <string name="tab_title_history_transported_packages">Transported packages</string>
</resources>